--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@google/generative-ai": "^0.1.0",
     "@sendgrid/mail": "^8.1.5",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.41.3",
     "colors": "^1.4.0",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
@@ -21,6 +22,7 @@
     "mongoose": "^7.4.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^6.9.4"
   },
   "devDependencies": {
